--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 	<meta charset="UTF-8">
 	<title>Freelancer</title>
 	<!-- Enlaza aquí tu CSS común y de tu proyecto -->
+	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
 <body>
 	<!-- Escribe tu código aquí -->
+<header>
+
+		<div class="menu-container">
+		<ul>
+			<h4>START-BOOTSTRAP</h4>
+		<li><a href="#" class="text-uppercase link">Portfolio</a></li>
+		<li><a href="#" class="text-uppercase link">About</a></li>
+		<li><a href="#" class="text-uppercase link">Contact</a><li>
+		</ul>
+		</div>
+	</header>
+
 
 	<!-- Enlaza aquí tu archivo JS -->
-	
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
