--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
 		</div>
 	</header>
 
-
+	<section id="perfil">
+		<div class="container">
+		<img src="assets/images/profile.png" alt="website" width="200">
+			<h2 class="text-uppercase text-services mt-0">
+				START-BOOTSTRAP
+			</h2>
+			<a href="#" class="text link">Web debeloper</a>
+			<a href="#" class="text link">Graphic artist</a>
+			<a href="#" class="text link">User experience design</a>
+		</div>
+			</h4>
+		</div>
+	</section>
 	<!-- Enlaza aquí tu archivo JS -->
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
