--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</div>
 	</header>
 
+	<!--Perfil-->
 	<section id="perfil">
 		<div class="container">
 		<img src="assets/images/profile.png" alt="website" width="200">
@@ -36,38 +37,36 @@
 		</div>
 	</section>
 
-
+	
 
 
 	<!--Sección Proyectos-->
 	<section id="proyectos">
 	<h2 class="text-uppercase text-portfolio mt-0">PORFOLIO</h2>
 		<div class="box-proyectos">
-				<img src="assets/images/img-1.jpg" alt="proyecto!" width="200">	
+				<img src="assets/images/portfolio/game.png" alt="proyecto!" width="200">	
 				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>		
 			</div>
 		<div class="box-proyectos">
-				<img src="assets/images/img-2.jpg" alt="proyecto2" width="200">
+				<img src="assets/images/portfolio/cabin.png" alt="proyecto2" width="200">
 				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
 			</div>
 		<div class="box-proyectos">
-				<img src="assets/images/img-3.jpg" alt="proyecto3" width="200">
+				<img src="assets/images/portfolio/cake.png" alt="proyecto3" width="200">
 				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
 			</div>
 		<div class="box-proyectos">
-				<img src="assets/images/img-4.jpg" alt="proyecto4" width="200">
+				<img src="assets/images/portfolio/circus.png" alt="proyecto4" width="200">
 				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
 			</div>	
 		<div class="box-proyectos">
-				<img src="assets/images/img-5.jpg" alt="proyecto5" width="200">
+				<img src="assets/images/portfolio/safe.png" alt="proyecto5" width="200">
 				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
 			</div>	
 		<div class="box-proyectos">
-				<img src="assets/images/img-5.jpg" alt="proyecto5" width="200">
+				<img src="assets/images/portfolio/submarine.png" alt="proyecto5" width="200">
 				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
-			</div>	
-			
-
+			</div>				
 	</section>
 
 
