--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
 			</div>				
 	</section>
 
+	<section id="about">
+		<h1 class="text-uppercase text-portfolio mt-0">ABOUT</h1>
+		<div id="parrafos">
+		<div class="parr1">
+		<p>We are working on some cool project at the moment. Watch this space for more awesomeness. If you get bored refreshing this pages, check out our facebook page for status updates</p>
+		</div>
+		<div class="parr2"><p>We are working on some cool project at the moment. Watch this space for more awesomeness. If you get bored refreshing this pages, check out our facebook page for status updates</p>
+		</div>
+		</div>
 
+	</section>
 
 	<!-- Enlaza aquí tu archivo JS -->
 	<script type="text/javascript" src="js/app.js"></script>
