--- a/index.html
+++ b/index.html
@@ -10,78 +10,90 @@
 </head>
 <body>
 	<!-- Escribe tu código aquí -->
-<header>
+	<header>
 
 		<div class="menu-container">
-		<ul>
-			<h4>START-BOOTSTRAP</h4>
-		<li><a href="#" class="text-uppercase link">Portfolio</a></li>
-		<li><a href="#" class="text-uppercase link">About</a></li>
-		<li><a href="#" class="text-uppercase link">Contact</a><li>
-		</ul>
-		</div>
-	</header>
+			<ul>
+				<h4>START-BOOTSTRAP</h4>
+				<li><a href="#" class="text-uppercase link">Portfolio</a></li>
+				<li><a href="#" class="text-uppercase link">About</a></li>
+				<li><a href="#" class="text-uppercase link">Contact</a><li>
+				</ul>
+			</div>
+		</header>
 
-	<!--Perfil-->
-	<section id="perfil">
-		<div class="container">
-		<img src="assets/images/profile.png" alt="website" width="200">
-			<h2 class="text-uppercase text-services mt-0">
-				START-BOOTSTRAP
-			</h2>
-			<a href="#" class="text link">Web debeloper</a>
-			<a href="#" class="text link">Graphic artist</a>
-			<a href="#" class="text link">User experience design</a>
-		</div>
-			</h4>
-		</div>
-	</section>
+		<!--Perfil-->
+		<section id="perfil">
+			<div class="container">
+				<img src="assets/images/profile.png" alt="website" width="200">
+				<h2 class="text-uppercase text-services mt-0">
+					START-BOOTSTRAP
+				</h2>
+				<a href="#" class="text link">Web debeloper</a>
+				<a href="#" class="text link">Graphic artist</a>
+				<a href="#" class="text link">User experience design</a>
+			</div>
+		</h4>
+	</div>
+</section>
 
+
+
+
+<!--Sección Proyectos-->
+<section id="proyectos">
+	<h2 class="text-uppercase text-portfolio mt-0">PORFOLIO</h2>
+	<div class="box-proyectos">
+		<img src="assets/images/portfolio/game.png" alt="proyecto!" width="200">	
+		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>		
+	</div>
+	<div class="box-proyectos">
+		<img src="assets/images/portfolio/cabin.png" alt="proyecto2" width="200">
+		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
+	</div>
+	<div class="box-proyectos">
+		<img src="assets/images/portfolio/cake.png" alt="proyecto3" width="200">
+		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
+	</div>
+	<div class="box-proyectos">
+		<img src="assets/images/portfolio/circus.png" alt="proyecto4" width="200">
+		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
+	</div>	
+	<div class="box-proyectos">
+		<img src="assets/images/portfolio/safe.png" alt="proyecto5" width="200">
+		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
+	</div>	
+	<div class="box-proyectos">
+		<img src="assets/images/portfolio/submarine.png" alt="proyecto5" width="200">
+		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
+	</div>				
+</section>
+
+<!--ABOUT-->
+<section class="row">
+        <div class="col-12">
+            <h2 class="texto">
+                ABOUT
+            </h2>
+        
+        <div class="col-3 parrafo">
+            <p>Frelancer is a free bootstrap theme created by Start Bootstrap. The dowload includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</p>
+        </div>
+        <div class="col-3 parrafo">
+            <p>Whether you're a student looking to showcase your work, a professioal looking to share your projects, this template is the perfect starting point!</p>
+        </div>
+        </div>
+		
+
+</section>	
+	
+
+	
+		
 	
 
 
-	<!--Sección Proyectos-->
-	<section id="proyectos">
-	<h2 class="text-uppercase text-portfolio mt-0">PORFOLIO</h2>
-		<div class="box-proyectos">
-				<img src="assets/images/portfolio/game.png" alt="proyecto!" width="200">	
-				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>		
-			</div>
-		<div class="box-proyectos">
-				<img src="assets/images/portfolio/cabin.png" alt="proyecto2" width="200">
-				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
-			</div>
-		<div class="box-proyectos">
-				<img src="assets/images/portfolio/cake.png" alt="proyecto3" width="200">
-				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
-			</div>
-		<div class="box-proyectos">
-				<img src="assets/images/portfolio/circus.png" alt="proyecto4" width="200">
-				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
-			</div>	
-		<div class="box-proyectos">
-				<img src="assets/images/portfolio/safe.png" alt="proyecto5" width="200">
-				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
-			</div>	
-		<div class="box-proyectos">
-				<img src="assets/images/portfolio/submarine.png" alt="proyecto5" width="200">
-				<h6 class="m-0">NOMBRE DEL PROYECTO</h6>			
-			</div>				
-	</section>
-
-	<section id="about">
-		<h1 class="text-uppercase text-portfolio mt-0">ABOUT</h1>
-		<div id="parrafos">
-		<div class="parr1">
-		<p>We are working on some cool project at the moment. Watch this space for more awesomeness. If you get bored refreshing this pages, check out our facebook page for status updates</p>
-		</div>
-		<div class="parr2"><p>We are working on some cool project at the moment. Watch this space for more awesomeness. If you get bored refreshing this pages, check out our facebook page for status updates</p>
-		</div>
-		</div>
-
-	</section>
-
-	<!-- Enlaza aquí tu archivo JS -->
-	<script type="text/javascript" src="js/app.js"></script>
+<!-- Enlaza aquí tu archivo JS -->
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
