--- a/index.html
+++ b/index.html
@@ -75,12 +75,17 @@
             <h2 class="texto">
                 ABOUT
             </h2>
-        
+         <div class="col-3 parrafo">
+            <p></p>
+        </div>
         <div class="col-3 parrafo">
             <p>Frelancer is a free bootstrap theme created by Start Bootstrap. The dowload includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</p>
         </div>
         <div class="col-3 parrafo">
             <p>Whether you're a student looking to showcase your work, a professioal looking to share your projects, this template is the perfect starting point!</p>
+        </div>
+         <div class="col-3 parrafo">
+            <p></p>
         </div>
         </div>
 		
