--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
 
 <!--Sección Proyectos-->
 <section id="proyectos">
+	<div>
 	<h2 class="text-uppercase text-portfolio mt-0">PORFOLIO</h2>
+	<!--estrella y lineas-->
+			<div class="box-star2">
+				<div class="rectangulo2" id="linea1"></div>			
+			</div>
+			<div class="box-star2 estrella">
+				<i class="fa fa-star" aria-hidden="true"></i>	
+			</div>
+			<div class="box-star2">
+				<div class="rectangulo2" id="linea2"></div>			
+			</div>
+	</div>
 	<div class="box-proyectos">
 		<img src="assets/images/portfolio/game.png" alt="proyecto!" width="200">	
 		<h6 class="m-0">NOMBRE DEL PROYECTO</h6>		
@@ -92,10 +104,19 @@
         <div class="col-12">
             <h2 class="texto">
                 ABOUT
-            </h2>
-         <div class="col-3 parrafo">
-            <p></p>
-        </div>
+         	<br>
+            <!--estrella y lineas-->
+			<div class="col-12 star3">
+				<div class="rectangulo" id="linea1"></div>			
+			</div>
+			<div class="col-12 star3">
+				<i class="fa fa-star" aria-hidden="true"></i>			
+			</div>
+			<div class="col-12 star3">
+				<div class="rectangulo" id="linea2"></div>			
+			</div>
+			   </h2>
+         <div class="col-3 parrafo"></div>
         <div class="col-3 parrafo">
             <p>Frelancer is a free bootstrap theme created by Start Bootstrap. The dowload includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</p>
         </div>
@@ -103,12 +124,16 @@
             <p>Whether you're a student looking to showcase your work, a professioal looking to share your projects, this template is the perfect starting point!</p>
         </div>
          <div class="col-3 parrafo">
-            <p></p>
-        </div>
-        </div>
+        </div></div>
+        <br>
+        <div class="col-12 boton">
+			 <button><p><i class="fa fa-download" aria-hidden="true"></i>Dowonload Theme</p></button></div>
 		
-
 </section>	
+
+
+
+
 	
 
 	
