--- a/index.html
+++ b/index.html
@@ -130,11 +130,29 @@
 			 <button><p><i class="fa fa-download" aria-hidden="true"></i>Dowonload Theme</p></button></div>
 		
 </section>	
+<br>
+<section class="row">
+        <div class="col-12 contacto">
+            <h2 class="texto">
+                CONTACT
+         	<br>
+            <!--estrella y lineas-->
+			<div class="col-12 star4">
+				<div class="rectangulo" id="linea1"></div>			
+			</div>
+			<div class="col-12 star4">
+				<i class="fa fa-star" aria-hidden="true"></i>			
+			</div>
+			<div class="col-12 star4">
+				<div class="rectangulo" id="linea2"></div>			
+			</div>
+			   </h2>
+         <div class="col-3 name">
+         	<input type="text" name="nombre" value="Name">
+         </div>
 
-
-
-
-	
+</div>
+</section>
 
 	
 		
